--- a/Main/vite-project/index.html
+++ b/Main/vite-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- ✅ Vite favicon -->
-    <link rel="icon" type="image/png" href="/logo.jpeg" />
+    <link rel="icon" type="image/png" href="/Main//vite-project/public/logo.jpeg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bajrang Krupa</title>
